# news_discord

./: .gitignore  Procfile  README.md  cli.py  config.example.yaml  config.yaml  main.py  pyproject.toml  railway.json  requirements.txt  schema.sql  wrangler.toml
.github/workflows/: send-news.yml
config/: __init__.py  manager.py  schema.py
db/: __init__.py  storage.py
fetchers/: __init__.py  aitimes.py  base.py  hada.py  rss.py  yozm.py
notifiers/: __init__.py  discord.py
scheduler/: __init__.py  cron.py
src/: entry.py
